--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,6 +1,15 @@
+//add everything here
+java {
+    sourceCompatibility = '1.8'
+}
+
+repositories {
+    mavenCentral()
+}
+
 dependencies {
-    implementation project(path: ':utils')
-}//add everything here
+    implementation project(':utils')
+}
 
 test {
     useJUnitPlatform()
